# kvllm

./: .gitignore  CLAUDE.md  README.md  eval-config.toml  justfile  models.toml  pyproject.toml
client/: README.md  pyproject.toml
client/src/kvllm_client/: __init__.py
client/tests/: test_client.py
deploy/: install.sh  kvllm-helper.service.in  kvllm.env.example  kvllm.service.in
docs/: 00-kickoff.md  01-backend-contract.md  02-quantization.md  03-deployment.md  04-helper-app.md
docs/findings/: README.md  evaluating-local-models.md  local-model-guidance-2026-07.md  local-vs-frontier-2026-07.html  methodology-2026-07.html
docs/model-research/: README.md  agentic-gap-2026-07.md
evals/: __init__.py  agentic.py  agentic_selftest.py  coding.py  coding_selftest.py  judged.py  sandbox_smoke.py  tools.py
evals/agentic_assets/: compose.yaml  scenarios.json
evals/coding_assets/: compose.yaml
kvllm/: __init__.py  evalctl.py  evalrun.py  helper.py  registry.py  score.py
kvllm/eval/: __init__.py  __main__.py  report.py  runner.py  suites.py
kvllm/static/: index.html
model-research/: .scout-state.json  2026-06-30-survey.md  README.md  candidates-2026-07.md
model-research/evals/: README.md  claude-haiku-4-5-2026-07-03.json  claude-haiku-4-5-2026-07-04.json  claude-haiku-4-5-2026-07-04.md  claude-sonnet-5-2026-07-02.json  claude-sonnet-5-2026-07-04.json  claude-sonnet-5-2026-07-04.md  deepseek-r1-distill-qwen-7b-2026-06-30.md  deepseek-r1-distill-qwen-7b-2026-07-03.json  deepseek-r1-distill-qwen-7b-2026-07-03.md  devstral-small-2-24b-2026-07-02.md  gemma-4-12b-it-2026-07-02.md  gemma-4-12b-it-2026-07-03.json  leaderboard.md  (+48 more)
sprints/: README.md  sprint-01-core-setup.md  sprint-02-serving-ergonomics.md  sprint-03-availability.md  sprint-04-helper-app.md  sprint-05-model-research.md  sprint-06-helper-skills.md  sprint-07-eval-harness.md  sprint-08-eval-harness-v2.md  sprint-09-findings.md  sprint-10-repo-restructure.md  sprint-11-vision-suite.md  sprint-12-vision-v2.md  sprint-13-client-lib.md
suites/: __init__.py  agentic.py  agentic_selftest.py  coding_selftest.py  judged.py  sandbox_smoke.py  tools.py  vision.py  vision_selftest.py
tests/: smoke_deepseek.py  smoke_langchain.py  smoke_tools.py  test_eval_report.py  test_eval_runner.py  test_eval_suites.py  test_evalctl.py  test_evalrun.py  test_evals_agentic.py  test_evals_coding.py  test_evals_judged.py  test_evals_tools.py  test_registry.py  test_score.py  test_suites_agentic.py  test_suites_coding.py  test_suites_judged.py  test_suites_tools.py  test_suites_vision.py
(+144 files in other folders)
