[project]
name = "kvllm"
version = "0.1.0"
description = "Local LLM serving on an RTX 5090 via vLLM, OpenAI-compatible /v1 for LangChain"
readme = "README.md"
# vLLM targets 3.9–3.12; pin 3.12 to avoid 3.13 wheel gaps (confirm in Sprint 1).
requires-python = ">=3.12,<3.13"
dependencies = [
    "vllm>=0.24.0",
]

[dependency-groups]
test = [
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "openai>=2.44.0",
]
dev = [
    "ruff>=0.14.0",
]
helper = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

# Use a uv-managed CPython (python-build-standalone) — it ships the dev headers (Python.h)
# that vLLM/Triton need to JIT-compile CUDA helpers at startup. System python3.12 has none.
[tool.uv]
python-preference = "only-managed"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
