[project]
name = "kvllm-client"
version = "0.1.0"
description = "Client library for kvllm's OpenAI-compatible /v1 — model discovery, local ChatOpenAI, ChatAnthropic escalation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "langchain-openai>=0.3",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "langchain-anthropic>=0.3",
]

[build-system]
requires = ["uv_build>=0.10,<0.12"]
build-backend = "uv_build"
